# GPTTrainDataCollector

./: README.md  pyproject.toml
config/: config.yaml
scripts/: generate_dataset.py
src/data_collector/: __init__.py  collector.py  config.py  writer.py
